removed manual setup